--- a/src/main/resources/views/Dispositivos.fxml
+++ b/src/main/resources/views/Dispositivos.fxml
@@ -2,11 +2,15 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
@@ -21,11 +25,40 @@
             <Button fx:id="btnNuevo" mnemonicParsing="false" onAction="#btnNuevoAction" text="Nuevo" />
             <Button fx:id="btnEliminar" mnemonicParsing="false" onAction="#btnEliminarAction" text="Eliminar" />
          </children></HBox>
+      <GridPane>
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="65.0" minWidth="10.0" prefWidth="40.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="300.0" />
+            <ColumnConstraints hgrow="SOMETIMES" prefWidth="25.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="421.0" minWidth="10.0" prefWidth="45.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="300.0" />
+            <ColumnConstraints hgrow="SOMETIMES" prefWidth="25.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="548.0" minWidth="10.0" prefWidth="45.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="300.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <TextField fx:id="txtNombre" prefHeight="25.0" prefWidth="332.0" GridPane.columnIndex="1" />
+            <Label text="Nombre:" />
+            <Label text="Categoría:" GridPane.columnIndex="3" />
+            <Label text="Marca:" GridPane.columnIndex="6" />
+            <Label text="Sede:" GridPane.rowIndex="1" />
+            <Label text="Programa:" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+            <Label text="Proveedor:" GridPane.columnIndex="6" GridPane.rowIndex="1" />
+            <ComboBox fx:id="cboxCategoria" prefHeight="25.0" prefWidth="320.0" GridPane.columnIndex="4" />
+            <ComboBox fx:id="cboxMarca" prefHeight="25.0" prefWidth="325.0" GridPane.columnIndex="7" />
+            <ComboBox fx:id="cboxSede" prefHeight="25.0" prefWidth="385.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <ComboBox fx:id="cboxPrograma" prefHeight="25.0" prefWidth="325.0" GridPane.columnIndex="4" GridPane.rowIndex="1" />
+            <ComboBox fx:id="cboxProveedor" prefHeight="25.0" prefWidth="324.0" GridPane.columnIndex="7" GridPane.rowIndex="1" />
+         </children>
+      </GridPane>
       <HBox alignment="CENTER_LEFT" prefHeight="45.0" prefWidth="200.0" spacing="10.0">
          <children>
-            <Label text="Buscar:" />
-            <TextField fx:id="txtBuscar" prefHeight="25.0" prefWidth="200.0" promptText="Escribe para buscar..." />
             <Button fx:id="btnBuscar" mnemonicParsing="false" onAction="#btnBuscarAction" text="Buscar" />
+            <Button fx:id="btnLimpiar" mnemonicParsing="false" onAction="#btnLimpiarAction" text="Limpiar filtros" />
          </children></HBox>
       <TableView fx:id="tablaDisp" onMouseClicked="#capturarClick" prefHeight="665.0" prefWidth="1228.0" tableMenuButtonVisible="true">
         <columns>
