--- a/src/main/resources/views/Proveedores.fxml
+++ b/src/main/resources/views/Proveedores.fxml
@@ -47,17 +47,17 @@
             <Button fx:id="btnBuscar" mnemonicParsing="false" onAction="#btnBuscarAction" text="Buscar" />
          </children>
       </HBox>
-      <TableView fx:id="tablaProv" onMouseClicked="#capturarClick" prefHeight="393.0" prefWidth="830.0" tableMenuButtonVisible="true">
+      <TableView fx:id="tablaProv" onMouseClicked="#capturarClick" tableMenuButtonVisible="true" VBox.vgrow="ALWAYS">
         <columns>
-          <TableColumn fx:id="colCodigo" prefWidth="75.0" text="Código" />
-          <TableColumn fx:id="colNombre" prefWidth="75.0" text="Nombre" />
-            <TableColumn fx:id="colCalle" prefWidth="75.0" text="Calle" />
+          <TableColumn fx:id="colCodigo" prefWidth="60.0" text="Código" />
+          <TableColumn fx:id="colNombre" prefWidth="150.0" text="Nombre" />
+            <TableColumn fx:id="colCalle" prefWidth="150.0" text="Calle" />
             <TableColumn fx:id="colLocalidad" prefWidth="75.0" text="Localidad" />
-            <TableColumn fx:id="colCp" prefWidth="75.0" text="CP" />
+            <TableColumn fx:id="colCp" prefWidth="50.0" text="CP" />
             <TableColumn fx:id="colMunicipio" prefWidth="75.0" text="Municipio" />
             <TableColumn fx:id="colProvincia" prefWidth="75.0" text="Provincia" />
             <TableColumn fx:id="colTelefono" prefWidth="75.0" text="Teléfono" />
-            <TableColumn fx:id="colEmail" prefWidth="75.0" text="Email" />
+            <TableColumn fx:id="colEmail" prefWidth="95.0" text="Email" />
         </columns>
       </TableView>
    </children>
