--- a/src/main/resources/views/Acceso.fxml
+++ b/src/main/resources/views/Acceso.fxml
@@ -1,37 +1,75 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<!-- Importación de clases necesarias para los nodos UI -->
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?> 
+<?import javafx.scene.control.Button?>                        
+<?import javafx.scene.control.PasswordField?>                 
+<?import javafx.scene.control.TextField?>                     
+<?import javafx.scene.image.ImageView?>                       
+<?import javafx.scene.layout.AnchorPane?>                     
+<?import javafx.scene.layout.BorderPane?>                     
+<?import javafx.scene.text.Font?>                             
+<?import javafx.scene.text.Text?>                             
 
-<BorderPane maxHeight="611.0" maxWidth="550.0" minHeight="611.0" minWidth="550.0" prefHeight="611.0" prefWidth="550.0" 
-            xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1"
+<!-- Contenedor principal de la interfaz, con tamaño fijo -->
+<BorderPane maxHeight="611.0" maxWidth="550.0" minHeight="611.0" minWidth="550.0"
+            prefHeight="611.0" prefWidth="550.0" 
+            xmlns="http://javafx.com/javafx/23.0.1"
+            xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="controller.AccesoController">
-    
+
+   <!-- Región central del BorderPane, contiene el formulario -->
    <center>
-      <AnchorPane maxHeight="589.0" maxWidth="384.0" minHeight="589.0" minWidth="384.0" prefHeight="589.0" prefWidth="384.0" BorderPane.alignment="CENTER">
+      <!-- Panel anclado (posicionamiento absoluto), tamaño fijo -->
+      <AnchorPane maxHeight="589.0" maxWidth="384.0" minHeight="589.0" minWidth="384.0"
+                  prefHeight="589.0" prefWidth="384.0"
+                  BorderPane.alignment="CENTER">
          <children>
-            <Text layoutX="110.0" layoutY="120.0" text="Login" textAlignment="CENTER" wrappingWidth="138.443359375">
+
+            <!-- Título principal "Login" -->
+            <Text layoutX="110.0" layoutY="120.0" text="Login" textAlignment="CENTER" wrappingWidth="138.44">
                <font>
                   <Font size="49.0" />
-               </font></Text>
+               </font>
+            </Text>
 
+            <!-- Icono de usuario (FontAwesome) -->
             <FontAwesomeIconView glyphName="USER" layoutX="34.0" layoutY="263.0" size="27" />
-            <TextField fx:id="txtUsuario" layoutX="79.0" layoutY="236.0" prefHeight="30.0" prefWidth="250.0" promptText="Usuario" />
 
+            <!-- Campo de texto para ingresar el nombre de usuario -->
+            <TextField fx:id="txtUsuario"
+                       layoutX="79.0" layoutY="236.0"
+                       prefHeight="30.0" prefWidth="250.0"
+                       promptText="Usuario" />
+
+            <!-- Icono de llave (para contraseña) -->
             <FontAwesomeIconView glyphName="KEY" layoutX="34.0" layoutY="366.0" size="27" />
-            <PasswordField fx:id="txtPassword" layoutX="79.0" layoutY="339.0" prefHeight="30.0" prefWidth="250.0" promptText="Contraseña" />
 
-            <Button fx:id="btnLogin" layoutX="79.0" layoutY="431.0" onAction="#btnActionLogin" prefHeight="30.0" prefWidth="100.0" text="Acceder" />
-            <Button fx:id="btnRegistrarse" layoutX="229.0" layoutY="431.0" onAction="#btnActionRegistrarse" prefHeight="30.0" prefWidth="100.0" text="Ir a Registrarse" />
+            <!-- Campo de texto para ingresar la contraseña -->
+            <PasswordField fx:id="txtPassword"
+                           layoutX="79.0" layoutY="339.0"
+                           prefHeight="30.0" prefWidth="250.0"
+                           promptText="Contraseña" />
 
-            <ImageView fitHeight="42.0" fitWidth="42.0" layoutX="160.0" layoutY="500.0" pickOnBounds="true" preserveRatio="true" />
+            <!-- Botón para iniciar sesión -->
+            <Button fx:id="btnLogin"
+                    layoutX="79.0" layoutY="431.0"
+                    onAction="#btnActionLogin"
+                    prefHeight="30.0" prefWidth="100.0"
+                    text="Acceder" />
+
+            <!-- Botón para ir al formulario de registro -->
+            <Button fx:id="btnRegistrarse"
+                    layoutX="229.0" layoutY="431.0"
+                    onAction="#btnActionRegistrarse"
+                    prefHeight="30.0" prefWidth="100.0"
+                    text="Ir a Registrarse" />
+
+            <!-- Imagen decorativa o de logotipo (puedes cargarle una imagen desde el controlador si lo deseas) -->
+            <ImageView fitHeight="42.0" fitWidth="42.0"
+                       layoutX="160.0" layoutY="500.0"
+                       pickOnBounds="true" preserveRatio="true" />
+
          </children>
       </AnchorPane>
    </center>
