--- a/src/main/resources/views/DispositivosMantenim.fxml
+++ b/src/main/resources/views/DispositivosMantenim.fxml
@@ -15,8 +15,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="487.0" prefWidth="767.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/23.0.1" fx:controller="controller.DispositivosMantenimController">
+<AnchorPane id="AnchorPane" prefHeight="487.0" prefWidth="767.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.DispositivosMantenimController">
    <children>
       <BorderPane layoutY="-43.0" prefHeight="443.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <top>
@@ -71,19 +70,20 @@
                   <Label text="Mac:" GridPane.rowIndex="5" />
                   <Label text="Imei:" GridPane.columnIndex="3" GridPane.rowIndex="5" />
                   <Label text="Nº etiqueta:" GridPane.rowIndex="6" />
-                  <Label text="Alumno:" GridPane.columnIndex="3" GridPane.rowIndex="6" />
-                  <Label text="Programa:" GridPane.rowIndex="7" />
+                  <Label text="Alumno:" GridPane.rowIndex="7" />
+                  <Label text="Programa:" GridPane.columnIndex="3" GridPane.rowIndex="6" />
                   <Label text="Comentario registro:" GridPane.rowIndex="8" />
                   <ComboBox fx:id="cboxProveedor" prefHeight="25.0" prefWidth="258.0" GridPane.columnIndex="4" GridPane.rowIndex="3" />
                   <ComboBox fx:id="cboxSede" prefHeight="25.0" prefWidth="237.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
                   <ComboBox prefHeight="25.0" prefWidth="252.0" GridPane.columnIndex="4" GridPane.rowIndex="4" />
-                  <ComboBox fx:id="cboxAlumno" prefHeight="25.0" prefWidth="252.0" GridPane.columnIndex="4" GridPane.rowIndex="6" />
-                  <ComboBox fx:id="cboxPrograma" prefHeight="25.0" prefWidth="236.0" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+                  <ComboBox fx:id="cboxPrograma" prefHeight="25.0" prefWidth="252.0" GridPane.columnIndex="4" GridPane.rowIndex="6" />
                   <TextArea fx:id="txtComent" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.columnSpan="4" GridPane.rowIndex="8" GridPane.rowSpan="2" />
                   <TextField fx:id="txtMac" GridPane.columnIndex="1" GridPane.rowIndex="5" />
                   <TextField fx:id="txtImei" GridPane.columnIndex="4" GridPane.rowIndex="5" />
                   <TextField fx:id="txtNetiqueta" GridPane.columnIndex="1" GridPane.rowIndex="6" />
                   <DatePicker fx:id="dtpFecha" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                  <TextField GridPane.columnIndex="1" GridPane.rowIndex="7" />
+                  <Button fx:id="btnPrestar" mnemonicParsing="false" onAction="#btnPrestarAction" text="Préstamo" GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.rowIndex="7" />
                </children>
                <opaqueInsets>
                   <Insets />
