--- a/src/main/resources/views/Sede.fxml
+++ b/src/main/resources/views/Sede.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
@@ -9,45 +8,41 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox prefHeight="580.0" prefWidth="886.0" spacing="10" style="-fx-padding: 20;" stylesheets="@../styles/tabla_alumnos.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AlumnosController">
+<VBox prefHeight="580.0" prefWidth="900.0" spacing="10" style="-fx-padding: 20;"
+      xmlns="http://javafx.com/javafx/23.0.1"
+      xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="controller.SedeController">
 
     <!-- Título -->
-    <Label styleClass="txt_alulmnos" text="Tabla de Sedes" textFill="WHITE" />
+    <Label text="Tabla de Sedes" />
 
-    <!-- Botones en línea -->
+    <!-- Botones -->
     <HBox spacing="10">
-        <Button fx:id="btnNuevoAlumno" mnemonicParsing="false" onAction="#btnActionNuevoAlumno" styleClass="btnNuevoAlumno" text="Nueva Sede" textFill="WHITE">
-            <graphic>
-                <FontAwesomeIconView fill="WHITE" glyphName="PLUS" />
-            </graphic>
-        </Button>
-        <Button fx:id="btnEliminarAlumno" mnemonicParsing="false" onAction="#btnActionEliminarAlumno" styleClass="btnEliminarAlumnoSeleccionado" text="Eliminar Sede">
-            <graphic>
-                <FontAwesomeIconView fill="WHITE" glyphName="TRASH" />
-            </graphic>
-        </Button>
-        <Button fx:id="btnEliminarTodos" mnemonicParsing="false" onAction="#btnActionEliminarTodos" styleClass="btnEliminarTodosLosAlumnos" text="Eliminar Todos">
-            <graphic>
-                <FontAwesomeIconView fill="WHITE" glyphName="TRASH" />
-            </graphic>
-        </Button>
+        <Button fx:id="btnNuevaSede" mnemonicParsing="false" onAction="#btnNuevaSedeAction" text="Nueva Sede" />
+        <Button fx:id="btnEliminarSede" mnemonicParsing="false" onAction="#btnEliminarSedeAction" text="Eliminar Sede" />
+        <Button fx:id="btnEliminarTodasSedes" mnemonicParsing="false" onAction="#btnEliminarTodasSedesAction" text="Eliminar Todas" />
     </HBox>
-    
+
     <!-- Barra de búsqueda -->
- 
     <HBox spacing="10">
-        <Label contentDisplay="RIGHT" prefHeight="35.0" prefWidth="60.0" styleClass="txtbuscar" text="Buscar:" textAlignment="RIGHT" textFill="white" />
-        <TextField fx:id="txtBuscar" prefHeight="35.0" prefWidth="423.0" promptText="Escribe para buscar..." styleClass="campo_busqueda" />
-        <Button fx:id="btnBuscar" onAction="#btnBuscarAction" prefHeight="35.0" text="Buscar" />
+        <Label prefHeight="35.0" prefWidth="60.0" text="Buscar:" />
+        <TextField fx:id="txtBuscar" prefHeight="35.0" prefWidth="423.0" promptText="Escribe para buscar..." />
+        <Button fx:id="btnBuscarSede" onAction="#btnBuscarSedeAction" prefHeight="35.0" text="Buscar" />
     </HBox>
 
-    <!-- Tabla -->
-    <TableView fx:id="tablaUsuarios" prefHeight="500.0" styleClass="tabla_Alumnos" VBox.vgrow="ALWAYS">
+    <!-- Tabla de sedes -->
+    <TableView fx:id="tablaSedes" prefHeight="500.0" VBox.vgrow="ALWAYS">
         <columns>
-            <TableColumn fx:id="colCodigo" prefWidth="143.0" styleClass="Columna-Codigo" text="Código Sede" />
-            <TableColumn fx:id="colNombre" prefWidth="221.0" styleClass="Columna-nombre" text="Nombre" />
-            <TableColumn fx:id="colCurso" prefWidth="192.0" styleClass="Columna-Curso" text="Teléfono" />
-            <TableColumn fx:id="colCodigoSede" prefWidth="279.199951171875" styleClass="Columna-Sede" text="Dirección" />
+            <TableColumn fx:id="colCodigoSede" prefWidth="100.0" text="Código Sede" />
+            <TableColumn fx:id="colNombre" prefWidth="150.0" text="Nombre" />
+            <TableColumn fx:id="colCalle" prefWidth="150.0" text="Calle" />
+            <TableColumn fx:id="colLocalidad" prefWidth="100.0" text="Localidad" />
+            <TableColumn fx:id="colCP" prefWidth="80.0" text="C.P." />
+            <TableColumn fx:id="colMunicipio" prefWidth="120.0" text="Municipio" />
+            <TableColumn fx:id="colProvincia" prefWidth="120.0" text="Provincia" />
+            <TableColumn fx:id="colTelefono" prefWidth="120.0" text="Teléfono" />
+            <TableColumn fx:id="colCodigoCentro" prefWidth="120.0" text="Código Centro" />
         </columns>
     </TableView>
+
 </VBox>
