--- a/src/main/resources/views/ProgramasEduMantenim.fxml
+++ b/src/main/resources/views/ProgramasEduMantenim.fxml
@@ -13,11 +13,11 @@
 
 <AnchorPane prefHeight="300.0" prefWidth="450.0" xmlns="http://javafx.com/javafx/23.0.1"
             xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="controller.CategoriaMantenimController">
+            fx:controller="controller.ProgramaEduMantenimController">
 
     <children>
         <!-- Título -->
-        <Text fill="black" layoutX="120.0" layoutY="50.0" text="Agregar Categoría">
+        <Text fill="black" layoutX="80.0" layoutY="50.0" text="Agregar Programa Educativo">
             <font>
                 <Font size="26.0" />
             </font>
