--- a/src/main/resources/views/Espacio.fxml
+++ b/src/main/resources/views/Espacio.fxml
@@ -1,38 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="600.0" prefWidth="900.0"
-            xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="controller.EspacioController">
+<AnchorPane prefHeight="600.0" prefWidth="900.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/23.0.1" fx:controller="controller.EspacioController">
     
-    <VBox spacing="10" AnchorPane.topAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.bottomAnchor="10.0">
+    <VBox spacing="10" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
         
         <!-- Título -->
-        <Label text="Gestión de Espacios Educativos" style="-fx-font-size: 18px; -fx-font-weight: bold;" />
+        <Label style="-fx-font-size: 18px; -fx-font-weight: bold;" text="Gestión de Espacios Educativos" />
 
         <!-- Botones principales -->
         <HBox spacing="10">
-            <Button fx:id="btnNuevoEspacio" text="Nuevo Espacio" onAction="#btnActionNuevoEspacio" />
-            <Button fx:id="btnEliminarEspacio" text="Eliminar Espacio" onAction="#btnActionEliminarEspacio" />
+            <Button fx:id="btnNuevoEspacio" onAction="#btnActionNuevoEspacio" text="Nuevo Espacio" />
+            <Button fx:id="btnEliminarEspacio" onAction="#btnActionEliminarEspacio" text="Eliminar Espacio" />
+         <Button fx:id="btnImportar" onAction="#btnActionImportar" text="Importar" />
+         <Button fx:id="btnExportar" onAction="#btnActionExportar" text="Exportar" />
         </HBox>
 
         <!-- Búsqueda -->
         <HBox spacing="10">
             <Label text="Buscar:" />
             <TextField fx:id="txtBuscarEspacio" promptText="Nombre, pabellón, planta..." />
-            <Button fx:id="btnBuscarEspacio" text="Buscar" onAction="#btnActionBuscarEspacio" />
+            <Button fx:id="btnBuscarEspacio" onAction="#btnActionBuscarEspacio" text="Buscar" />
         </HBox>
 
         <!-- Tabla de espacios -->
-        <TableView fx:id="tablaEspacios" VBox.vgrow="ALWAYS" prefHeight="500">
+        <TableView fx:id="tablaEspacios" prefHeight="500" VBox.vgrow="ALWAYS">
             <columns>
-                <TableColumn fx:id="colCodigoEspacio" text="Código" prefWidth="100.0" />
-                <TableColumn fx:id="colNombre" text="Nombre" prefWidth="150.0" />
-                <TableColumn fx:id="colPabellon" text="Pabellón" prefWidth="150.0" />
-                <TableColumn fx:id="colPlanta" text="Planta" prefWidth="100.0" />
-                <TableColumn fx:id="colNombreSede" text="Sede (Código - Nombre)" prefWidth="200.0" />
+                <TableColumn fx:id="colCodigoEspacio" prefWidth="100.0" text="Código" />
+                <TableColumn fx:id="colNombre" prefWidth="150.0" text="Nombre" />
+                <TableColumn fx:id="colPabellon" prefWidth="150.0" text="Pabellón" />
+                <TableColumn fx:id="colPlanta" prefWidth="100.0" text="Planta" />
+                <TableColumn fx:id="colNombreSede" prefWidth="200.0" text="Sede (Código - Nombre)" />
 
             </columns>
         </TableView>
