--- a/src/main/resources/views/DispositivosMantenim.fxml
+++ b/src/main/resources/views/DispositivosMantenim.fxml
@@ -82,7 +82,7 @@
                   <TextField fx:id="txtImei" GridPane.columnIndex="4" GridPane.rowIndex="5" />
                   <TextField fx:id="txtNetiqueta" GridPane.columnIndex="1" GridPane.rowIndex="6" />
                   <DatePicker fx:id="dtpFecha" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                  <TextField GridPane.columnIndex="1" GridPane.rowIndex="7" />
+                  <TextField editable="false" GridPane.columnIndex="1" GridPane.rowIndex="7" />
                   <Button fx:id="btnPrestar" mnemonicParsing="false" onAction="#btnPrestarAction" text="Préstamo" GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.rowIndex="7" />
                </children>
                <opaqueInsets>
