--- a/src/main/resources/views/CategoriaMantenim.fxml
+++ b/src/main/resources/views/CategoriaMantenim.fxml
@@ -1,52 +1,49 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<VBox prefHeight="580.0" prefWidth="886.0" spacing="10" style="-fx-padding: 20;" 
-      stylesheets="@../styles/tabla_alumnos.css" xmlns="http://javafx.com/javafx/23.0.1"
-      xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.CategoriaController">
+<AnchorPane prefHeight="300.0" prefWidth="450.0" xmlns="http://javafx.com/javafx/23.0.1"
+            xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="controller.CategoriaMantenimController">
 
-    <!-- Título -->
-    <Label styleClass="txt_alulmnos" text="Tabla de Categorías" textFill="WHITE" />
+    <children>
+        <!-- Título -->
+        <Text fill="black" layoutX="120.0" layoutY="50.0" text="Agregar Categoría">
+            <font>
+                <Font size="26.0" />
+            </font>
+        </Text>
 
-    <!-- Botones en línea -->
-    <HBox spacing="10">
-        <Button fx:id="btnNuevaCategoria" mnemonicParsing="false" onAction="#btnActionNuevaCategoria" styleClass="btnNuevoMarca" text="Nueva Categoría" textFill="WHITE">
-            <graphic>
-                <FontAwesomeIconView fill="WHITE" glyphName="PLUS" />
-            </graphic>
-        </Button>
-        <Button fx:id="btnEliminarCategoria" mnemonicParsing="false" onAction="#btnActionEliminarCategoria" styleClass="btnEliminarMarcaSeleccionado" text="Eliminar Categoría">
-            <graphic>
-                <FontAwesomeIconView fill="WHITE" glyphName="TRASH" />
-            </graphic>
-        </Button>
-        <Button fx:id="btnEliminarTodas" mnemonicParsing="false" onAction="#btnActionEliminarTodas" styleClass="btnEliminarTodosLasMarcas" text="Eliminar Todas">
-            <graphic>
-                <FontAwesomeIconView fill="WHITE" glyphName="TRASH" />
-            </graphic>
-        </Button>
-    </HBox>
-    
-    <!-- Barra de búsqueda -->
-    <HBox spacing="10">
-        <Label contentDisplay="RIGHT" prefHeight="35.0" prefWidth="60.0" styleClass="txtbuscar" text="Buscar:" textAlignment="RIGHT" textFill="white" />
-        <TextField fx:id="txtBuscar" prefHeight="35.0" prefWidth="423.0" promptText="Escribe para buscar..." styleClass="campo_busqueda" />
-        <Button fx:id="btnBuscar" onAction="#btnBuscarAction" prefHeight="35.0" text="Buscar" />
-    </HBox>
+        <!-- Formulario -->
+        <GridPane hgap="10" layoutX="60.0" layoutY="80.0" vgap="20">
+            <padding>
+                <Insets top="10" right="10" bottom="10" left="10" />
+            </padding>
 
-    <!-- Tabla -->
-    <TableView fx:id="tablaCategorias" prefHeight="500.0" styleClass="tabla_Alumnos" VBox.vgrow="ALWAYS">
-        <columns>
-            <TableColumn fx:id="colCodigo" prefWidth="399.2" styleClass="Columna-Codigo" text="Código Categoría" />
-            <TableColumn fx:id="colNombre" prefWidth="438.4" styleClass="Columna-nombre" text="Nombre" />
-        </columns>
-    </TableView>
-</VBox>
+            <!-- Nombre -->
+            <Label text="Nombre:" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+            <TextField fx:id="txtNombre" prefWidth="250.0" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+
+            <columnConstraints>
+                <ColumnConstraints />
+                <ColumnConstraints />
+            </columnConstraints>
+            <rowConstraints>
+                <RowConstraints />
+            </rowConstraints>
+        </GridPane>
+
+        <!-- Botones -->
+        <Button fx:id="btnGuardar" layoutX="100.0" layoutY="220.0" prefWidth="120.0" text="Guardar" />
+        <Button fx:id="btnCancelar" layoutX="230.0" layoutY="220.0" prefWidth="120.0" onAction="#btnActionCancelar" text="Cancelar" />
+    </children>
+</AnchorPane>
