--- a/src/main/resources/views/ProgramasEdu.fxml
+++ b/src/main/resources/views/ProgramasEdu.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
@@ -8,44 +9,51 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<VBox prefHeight="580.0" prefWidth="886.0" spacing="10" style="-fx-padding: 20;" stylesheets="@../styles/tabla_alumnos.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AlumnosController">
+<VBox xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ProgramasEduController">
 
     <!-- Título -->
-    <Label styleClass="txt_alulmnos" text="Tabla de Programas Educativos" textFill="WHITE" />
+    <Label text="Programas Educativos">
+      <font>
+         <Font size="24.0" />
+      </font></Label>
 
     <!-- Botones en línea -->
-    <HBox spacing="10">
-        <Button fx:id="btnNuevoAlumno" mnemonicParsing="false" onAction="#btnActionNuevoAlumno" styleClass="btnNuevoAlumno" text="Nuevo Programa" textFill="WHITE">
+    <HBox alignment="CENTER_LEFT" prefHeight="45.0" prefWidth="830.0" spacing="20.0">
+        <Button fx:id="btnNuevoPrograma" mnemonicParsing="false" onAction="btnActionNuevoPrograma" text="Nuevo Programa">
             <graphic>
-                <FontAwesomeIconView fill="WHITE" glyphName="PLUS" />
+                <FontAwesomeIconView glyphName="PLUS" selectionFill="BLACK" />
             </graphic>
         </Button>
-        <Button fx:id="btnEliminarAlumno" mnemonicParsing="false" onAction="#btnActionEliminarAlumno" styleClass="btnEliminarAlumnoSeleccionado" text="Eliminar Programa">
+        <Button fx:id="btnEliminarPrograma" mnemonicParsing="false" onAction="btnActionEliminarPrograma" text="Eliminar Programa">
             <graphic>
-                <FontAwesomeIconView fill="WHITE" glyphName="TRASH" />
+                <FontAwesomeIconView glyphName="TRASH" />
             </graphic>
         </Button>
-        <Button fx:id="btnEliminarTodos" mnemonicParsing="false" onAction="#btnActionEliminarTodos" styleClass="btnEliminarTodosLosAlumnos" text="Eliminar Todos">
+        <Button fx:id="btnEliminarTodos" disable="true" mnemonicParsing="false" onAction="btnActionEliminarTodos" text="Eliminar Todos">
             <graphic>
-                <FontAwesomeIconView fill="WHITE" glyphName="TRASH" />
+                <FontAwesomeIconView glyphName="TRASH" />
             </graphic>
         </Button>
     </HBox>
     
     <!-- Barra de búsqueda -->
  
-    <HBox spacing="10">
-        <Label contentDisplay="RIGHT" prefHeight="35.0" prefWidth="60.0" styleClass="txtbuscar" text="Buscar:" textAlignment="RIGHT" textFill="white" />
-        <TextField fx:id="txtBuscar" prefHeight="35.0" prefWidth="423.0" promptText="Escribe para buscar..." styleClass="campo_busqueda" />
-        <Button fx:id="btnBuscar" onAction="#btnBuscarAction" prefHeight="35.0" text="Buscar" />
+    <HBox alignment="CENTER_LEFT" prefHeight="45.0" prefWidth="830.0" spacing="10">
+        <Label contentDisplay="RIGHT" prefHeight="35.0" prefWidth="60.0" text="Buscar:" textAlignment="RIGHT" />
+        <TextField fx:id="txtBuscar" prefHeight="35.0" prefWidth="423.0" promptText="Escribe para buscar..." />
+        <Button fx:id="btnBuscar" onAction="btnBuscarAction" prefHeight="35.0" text="Buscar" />
     </HBox>
 
     <!-- Tabla -->
-    <TableView fx:id="tablaUsuarios" prefHeight="500.0" styleClass="tabla_Alumnos" VBox.vgrow="ALWAYS">
+    <TableView fx:id="tablaProgramas" styleClass="tabla_Alumnos" VBox.vgrow="ALWAYS">
         <columns>
-            <TableColumn fx:id="colCodigo" prefWidth="415.1999931335449" styleClass="Columna-Codigo" text="Código Programa" />
-            <TableColumn fx:id="colNombre" prefWidth="419.1999816894531" styleClass="Columna-nombre" text="Nombre" />
+            <TableColumn fx:id="colCodigo" prefWidth="150.0" text="Código Programa" />
+            <TableColumn fx:id="colNombre" prefWidth="673.0" text="Nombre" />
         </columns>
     </TableView>
+   <padding>
+      <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+   </padding>
 </VBox>
